feat: refining merch sheets service

--- a/src/templates/ticketingEmailTemplate.html
+++ b/src/templates/ticketingEmailTemplate.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="whatsapp-link">
-                <p >Gabung grup Whatsapp kita untuk informasi lebih lanjut</p>
+                <p >Gabung grup Whatsapp kita untuk informasi lebih lanjut, ya!</p>
                 <a href="{{whatsappLink}}" target="_blank" class="whatsapp-button">Gabung Grup Whatsapp</a>
             </div>
             
