fix: minor adjustment in ticketing email template

--- a/src/templates/ticketingEmailTemplate.html
+++ b/src/templates/ticketingEmailTemplate.html
@@ -72,7 +72,7 @@
         </div>
         <div class="content">
             <p>Halo <span class="highlight">{{ name }}</span>,</p>
-            <p>Terima kasih sudah mendaftar untuk acara <span class="highlight">Introduction to Psychology Fakultas Psikologi, Universitas Indonesia</span>.</p>
+            <p>Terima kasih sudah mendaftar untuk main event <span class="highlight">Introduction to Psychology Fakultas Psikologi, Universitas Indonesia</span>.</p>
             <p>Berikut adalah simulasi kelasmu:</p>
             <div class="highlight">{{ kelas }}</div>
             <p>Tanggal main event: <span class="highlight">10 Juni 2024</span></p>
@@ -89,7 +89,7 @@
             </div>
             <br>
             
-            <p>Sampai bertemu di main event, ya!</p>
+            <p>Sampai bertemu di main event!</p>
             <p>Salam hangat,<br>Panitia Introduction to Psychology</p>
         </div>
         <div>
