chore: improving email service efficiency by handling concurrency request and changing how QR generated

--- a/src/templates/ticketingEmailTemplate.html
+++ b/src/templates/ticketingEmailTemplate.html
@@ -80,7 +80,7 @@
             <br>
             <div class="qr-code">
                 <p style="margin: 0;">Pakai kode QR di bawah ini untuk registrasi di main event:</p>
-                <img src="cid:qrcode" alt="header">
+                <img src="{{ qrCodeURL }}" alt="header">
             </div>
 
             <div class="whatsapp-link">
