--- a/src/templates/ticketingEmailTemplate.html
+++ b/src/templates/ticketingEmailTemplate.html
@@ -39,6 +39,7 @@
         .qr-code img {
             width: 300px;
             height: 300px;
+            margin: 20px;
         }
         .footer {
             text-align: center;
